# jserial

./: .gitignore  .package.json.swp  README.md  license.md  package.json
lib/: jserial.js  lz4.js  lz4.wasm.js  lz4.wasm.simd.js  stream.js  utility.js
lib/platform/: browser.js  index.js
lib/utils/: common.js
scripts/: build-wasm.mjs
src/lz4/: Cargo.toml
src/lz4/src/: ffi.rs  lib.rs
