[package]
name = "lz4"
version = "0.1.0"
edition = "2021"

[lib]
name = "lz4"
crate-type = ["cdylib"]

[dependencies]
lz4_flex = { version = "0.11", default-features = false, features = ["checked-decode"] }
talc = { version = "5", features = ["disable-realloc-in-place"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
